--- a/Html/index.html
+++ b/Html/index.html
@@ -115,9 +115,9 @@
             <div class="col-md-10">
                 <div class="row">
                     <div class="col-md-3 mb-4">
-                        <div class="card h-100" >
+                        <div class="card h-100 d-flex flex-column" >
                             <img src="../Image/man.jpeg" class="card-img-top product-img" alt="Product 1">
-                            <div class="card-body">
+                            <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Men's Wear</h5>
                                 <p class="card-text flex-grow-1">Black Tux</p>
                                 <p class="card-text"><strong>Rs:20000/-</strong></p>
@@ -126,20 +126,20 @@
                         </div>
                     </div>
                     <div class="col-md-3 mb-4">
-                        <div class="card h-100" >
+                        <div class="card h-100 d-flex flex-column"  >
                             <img src="../Image/boys.jpeg" class="card-img-top product-img" alt="Product 1">
-                            <div class="card-body">
+                            <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Men's Wear</h5>
                                 <p class="card-text flex-grow-1">Leather Jacket & White Shirt</p>
                                 <p class="card-text"><strong>Rs:8000/-</strong></p>
-                                <a href="#" class="btn btn-primary text-center">Add to Cart</a>
+                                <a href="#" class="btn btn-primary text-center mt-auto">Add to Cart</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3 mb-4">
-                        <div class="card h-100" >
+                        <div class="card h-100 d-flex flex-column" >
                             <img src="../Image/girl.jpeg" class="card-img-top product-img" alt="Product 1">
-                            <div class="card-body">
+                            <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Women's Wear</h5>
                                 <p class="card-text flex-grow-1">Green Salwar Suit</p>
                                 <p class="card-text"><strong>Rs:5000/-</strong></p>
@@ -148,9 +148,9 @@
                         </div>
                     </div>
                     <div class="col-md-3 mb-4">
-                        <div class="card h-100" >
+                        <div class="card h-100 d-flex flex-column" >
                             <img src="../Image/hoodie.jpeg" class="card-img-top product-img" alt="Product 1">
-                            <div class="card-body">
+                            <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Women's Wear</h5>
                                 <p class="card-text flex-grow-1">Dark Blue Hoodie</p>
                                 <p class="card-text"><strong>Rs:2000/-</strong></p>
@@ -159,9 +159,9 @@
                         </div>
                     </div>
                     <div class="col-md-3 mb-4">
-                        <div class="card h-100" >
+                        <div class="card h-100 d-flex flex-column" >
                             <img src="../Image/frock.jpeg" class="card-img-top product-img"  alt="Product 1">
-                            <div class="card-body">
+                            <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Kid's Wear</h5>
                                 <p class="card-text flex-grow-1">Light Blue Princess Gown</p>
                                 <p class="card-text"><strong>Rs:15000/-</strong></p>
@@ -170,9 +170,9 @@
                         </div>
                     </div>
                     <div class="col-md-3 mb-4">
-                        <div class="card h-100" >
+                        <div class="card h-100 d-flex flex-column" >
                             <img src="../Image/top6d535.jpeg" class="card-img-top product-img" alt="Product 1">
-                            <div class="card-body">
+                            <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Women's Wear</h5>
                                 <p class="card-text flex-grow-1">Light Blue  Top.</p>
                                 <p class="card-text"><strong>Rs.5000/-</strong></p>
@@ -181,9 +181,9 @@
                         </div>
                     </div>
                     <div class="col-md-3 mb-4" >
-                        <div class="card h-100">
+                        <div class="card h-100 d-flex flex-column">
                             <img src="../Image/modern5.jpeg" class="card-img-top product-img" alt="Product 1">
-                            <div class="card-body">
+                            <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Women's Wear</h5>
                                 <p class="card-text flex-grow-1">School Uniform Skirt and Top.</p>
                                 <p class="card-text"><strong>Rs:8000/-</strong></p>
@@ -192,9 +192,9 @@
                         </div>
                     </div>
                     <div class="col-md-3 mb-4">
-                        <div class="card h-100">
+                        <div class="card h-100 d-flex flex-column">
                             <img src="../Image/office.jpeg" class="card-img-top product-img" alt="Product 1">
-                            <div class="card-body">
+                            <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Women's Wear</h5>
                                 <p class="card-text flex-grow-1">Women Professional Wear</p>
                                 <p class="card-text"><strong>Rs:10000/-</strong></p>
@@ -203,9 +203,9 @@
                         </div>
                     </div>
                     <div class="col-md-3 mb-4">
-                        <div class="card h-100">
+                        <div class="card h-100 d-flex flex-column">
                             <img src="../Image/beach.jpeg" class="card-img-top product-img" alt="Product 1">
-                            <div class="card-body">
+                            <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Men's Wear</h5>
                                 <p class="card-text flex-grow-1">Comfortable Beach Top</p>
                                 <p class="card-text"><strong>Rs:1000/-</strong></p>
@@ -214,9 +214,9 @@
                         </div>
                     </div>
                     <div class="col-md-3 mb-4">
-                        <div class="card h-100">
+                        <div class="card h-100 d-flex flex-column">
                             <img src="../Image/shirt01.jpeg" class="card-img-top product-img" alt="Product 1">
-                            <div class="card-body">
+                            <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Men's Wear</h5>
                                 <p class="card-text flex-grow-1">White Shirt & Floral Prints</p>
                                 <p class="card-text"><strong>Rs:2000/-</strong></p>
@@ -225,9 +225,9 @@
                         </div>
                     </div>
                     <div class="col-md-3 mb-4">
-                        <div class="card h-100">
+                        <div class="card h-100 d-flex flex-column">
                             <img src="../Image/kid136b.jpeg" class="card-img-top product-img" alt="Product 1">
-                            <div class="card-body">
+                            <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Kid's Wear</h5>
                                 <p class="card-text flex-grow-1">White T-Shirt & Jean</p>
                                 <p class="card-text"><strong>RS:2000/-</strong></p>
@@ -236,9 +236,9 @@
                         </div>
                     </div>
                     <div class="col-md-3 mb-4">
-                        <div class="card h-100">
+                        <div class="card h-100 d-flex flex-column">
                             <img src="../Image/minif.jpeg" class="card-img-top product-img" alt="Product 1">
-                            <div class="card-body">
+                            <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Kid's Wear</h5>
                                 <p class="card-text flex-grow-1">Black T-Shirt</p>
                                 <p class="card-text"><strong>Rs:1000/-</strong></p>
